# raylib-meson-example

./: LICENSE  README.md  cross-linux-x86.ini  cross-win64-mingw.ini  linux-x86.txt  meson.build  shapes_bouncing_ball.c
subprojects/: .gitignore  raylib-4.0.0_linux_amd64.wrap  raylib-4.0.0_linux_x86.wrap  raylib-4.0.0_linux_x86_64.wrap  raylib-4.0.0_win64_mingw-w64.wrap  raylib_linux_x86.wrap  raylib_linux_x86_64.wrap  raylib_win64_mingw-w64.wrap
subprojects/packagefiles/raylib/: meson.build
subprojects/packagefiles/raylib-4.0.0/: meson.build
subprojects/packagefiles/raylib-4.0.0_linux_amd64/: meson.build
